[gd_scene load_steps=12 format=3 uid="uid://dj2ioab4qs24y"]

[ext_resource type="Script" path="res://Components/velocity/velocity_component.gd" id="1_jtncf"]
[ext_resource type="Script" path="res://Objects/fish/fish.gd" id="1_rw3yj"]
[ext_resource type="Texture2D" uid="uid://cyl7cp327bp07" path="res://Art/dory_spritesheet.png" id="3_msh05"]
[ext_resource type="Script" path="res://Components/health/health_component.gd" id="3_s8t38"]
[ext_resource type="Texture2D" uid="uid://djghgdp4eov2p" path="res://Art/enemy_kill.png" id="5_fy81f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_djuh3"]
radius = 19.0
height = 66.0

[sub_resource type="Curve" id="Curve_q213e"]
_data = [Vector2(0, 0.990909), 0.0, 0.0, 0, 0, Vector2(0.774725, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_yt7s7"]
offsets = PackedFloat32Array(0.00662252, 0.993378)
colors = PackedColorArray(0.254902, 0, 0.254902, 1, 0.941176, 0.411765, 0.137255, 1)

[sub_resource type="Gradient" id="Gradient_61n2j"]
offsets = PackedFloat32Array(0, 0.993378)
colors = PackedColorArray(0.843137, 0.176471, 0.176471, 1, 0.941176, 0.411765, 0.137255, 1)

[sub_resource type="Animation" id="Animation_74qvc"]
resource_name = "swim"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c6c0c"]
_data = {
"swim": SubResource("Animation_74qvc")
}

[node name="Fish" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_rw3yj")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("1_jtncf")
speed = 150.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_msh05")
flip_h = true
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_djuh3")

[node name="Health" type="Node2D" parent="."]
script = ExtResource("3_s8t38")
max_health = 1

[node name="DieP" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.7
one_shot = true
explosiveness = 1.0
local_coords = true
texture = ExtResource("5_fy81f")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 41.27
initial_velocity_max = 100.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_q213e")
color_initial_ramp = SubResource("Gradient_yt7s7")

[node name="DieP2" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 183.43
initial_velocity_max = 183.43
scale_amount_min = 7.0
scale_amount_max = 7.0
scale_amount_curve = SubResource("Curve_q213e")
color_initial_ramp = SubResource("Gradient_61n2j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swim"
libraries = {
"": SubResource("AnimationLibrary_c6c0c")
}

[node name="DeathSFX" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
